changed grid to add more whitespace, fixed requirements size

--- a/scss/partials/_media-query.scss
+++ b/scss/partials/_media-query.scss
@@ -6,11 +6,11 @@ $break-small: 62em;
     /* intro grid */
     .intro {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: 70px repeat(7, 1fr) 70px;
     }
 
     header, .summary {
-        grid-column: 1 / span 5;
+        grid-column: 1 / span 9;
     }
     
     #zen-preamble {
@@ -76,7 +76,7 @@ $break-small: 62em;
     }
 
     .preamble {
-        grid-column: 1 / span 2;
+        grid-column: 2 / span 3;
     }
 
     .preamble::after {
@@ -99,22 +99,24 @@ $break-small: 62em;
     /* main grid */
     .main {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        gap: 1em;
+        grid-template-columns: 25px repeat(7, 1fr) 25px;
+        grid-template-rows: 50px 150px 1fr 1fr 460px 40px;
+        gap: 1.5em;
     }
 
     .benefits {
-        grid-column: 1 / span 2;
-        grid-row: 1 / span 1;
+        grid-column: 2 / span 2;
+        grid-row: 2 / span 1;
     }
     
     .explanation {
-        grid-column: 3 / span 3;
+        grid-column: 5 / span 3;
+        grid-row: 3 / span 1;
     }
 
     .participation {
-        grid-column: 1 / span 3;
+        grid-column: 2 / span 3;
+        grid-row: 4 / span 1;
     }
 
     .participation::after {
@@ -134,11 +136,13 @@ $break-small: 62em;
     }
 
     .requirements {
-        grid-column: 1 / span 5;
+        grid-column: 1 / span 9;
+        grid-row: 5 / span 1;
     }
 
     footer {
-        grid-column: 1 / span 5;
+        grid-column: 1 / span 9;
+        grid-row: 6 / span 1;
     }
 
     /* satellite grid */
